--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <body>
 
     <audio id="angry-audio" loop>
-        <source src="angry.mp3" type="audio/mpeg">
+        <source src="Angry.mp3" type="audio/mpeg">
     </audio>
 
     <div id="faze-1" class="faze">
@@ -223,7 +223,7 @@
     </div>
 
     <div id="faze-angry" class="faze">
-        <img src="Angry.gif" alt="Angry" class="obrazek">
+        <img src="angry.gif" alt="angry" class="obrazek">
         <h1>Máš poslední šanci si to rozmyslet! 🔪</h1>
         <div class="arrows-wrapper">
             <div class="arrow top">⬇</div>
@@ -366,4 +366,5 @@
         });
     </script>
 </body>
+
 </html>
