--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             align-items: center;
             background-color: #ffe6e6; /* Výchozí růžová */
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            /* ZMĚNA: Overflow hidden necháme jen pro základ, třídy to přepíšou */
             overflow: hidden; 
             text-align: center;
             transition: background-color 0.8s ease, background-image 0.8s ease; 
@@ -25,6 +26,18 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+        }
+
+        /* --- ZMĚNA: Povolení scrollování pro ostatní fáze --- */
+        /* Jakmile se přidá jakákoliv z těchto tříd, scrollování se povolí */
+        body.angry-mode, 
+        body.green-mode, 
+        body.titanic-mode, 
+        body.sushi-mode {
+            overflow-y: auto !important; /* Povolit svislé scrollování */
+            justify-content: flex-start; /* Zarovnání odshora, aby se obsah neschovával */
+            padding-top: 50px; /* Odsazení odshora */
+            padding-bottom: 50px; /* Odsazení odspodu */
         }
 
         /* --- Třídy pro změnu barvy/pozadí --- */
@@ -38,6 +51,9 @@
         body.sushi-mode {
             background-image: url('sushi.jpg');
             background-color: transparent !important;
+            /* U sushi chceme obsah na střed */
+            justify-content: center !important; 
+            padding: 0 !important;
         }
 
         /* Styl pro GIFy */
@@ -65,6 +81,8 @@
             align-items: center;
             width: 100%;
             justify-content: center;
+            /* ZMĚNA: Přidán padding pro lepší zobrazení na mobilech */
+            padding-bottom: 40px; 
         }
 
         #faze-1 { display: flex; min-height: 60vh; }
@@ -194,7 +212,6 @@
              min-height: 100vh;
              width: 100%;
              display: none; 
-             /* ZMĚNA: Kompletní vycentrování */
              align-items: center; 
              justify-content: center; 
              padding: 0; 
@@ -205,7 +222,6 @@
             color: white;
             font-size: 8rem; 
             font-weight: 900;
-            /* ZMĚNA: Zarovnání textu na střed */
             text-align: center;
             line-height: 1.1;
             max-width: 95%; 
